--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -3493,6 +3493,7 @@ cheap_model_fb <- calc_model_result(FB_cheap$ID, "FB") %>% rename("cheapest" = p
 pk_model_fb <- calc_model_result(FB_pk_seq$ID, "FB") %>% rename("pk" = pred_out)
 random_model_fb <- calc_model_result(FB_random$ID, "FB") %>% rename("random" = pred_out)
 twi_model_fb <- calc_model_result(fb_twi_sequence$ID, "FB") %>% rename("twi" = pred_out)
+new_model_fb <- calc_model_result(new_seq_fb$down, "FB") %>% rename("new" = pred_out)
 
 comparison_fb <- input_fb %>% 
   filter(mins %in% c(0, 30)) %>% 
@@ -3500,6 +3501,7 @@ comparison_fb <- input_fb %>%
   left_join(pk_model_fb, by = c("datetime", "ID")) %>% 
     left_join(random_model_fb, by = c("datetime", "ID")) %>% 
   left_join(twi_model_fb, by = c("datetime", "ID")) %>% 
+  left_join(new_model_fb, by = c("datetime", "ID")) %>% 
   select(-wshed, -mins) %>% 
   drop_na()
 
@@ -3508,6 +3510,8 @@ comparison_fb$cheapest_eval <- mapply(get_eval_label, comparison_fb$binary, comp
 comparison_fb$pk_eval <- mapply(get_eval_label, comparison_fb$binary, comparison_fb$pk)
 comparison_fb$random_eval <- mapply(get_eval_label, comparison_fb$binary, comparison_fb$random)
 comparison_fb$twi_eval <- mapply(get_eval_label, comparison_fb$binary, comparison_fb$twi)
+comparison_fb$new_eval <- mapply(get_eval_label, comparison_fb$binary, comparison_fb$new)
+
 
 
 #summarize through time
@@ -3518,17 +3522,19 @@ df_summary_time_fb <- comparison_fb %>%
     pk_correct = sum(pk_eval == "correct"),
     random_correct = sum(random_eval == "correct"),
     twi_correct = sum(twi_eval == "correct"),
+    new_correct = sum(new_eval == "correct"),
     total = n(),
     cheap_accuracy = cheap_correct / total,
     pk_accuracy = pk_correct / total,
     random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
+    twi_accuracy = twi_correct / total,
+    new_accuracy = new_correct / total
   )
 
 
 df_long_fb <- df_summary_time_fb %>%
-  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy), names_to = "model", values_to = "accuracy")
+  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy, new_accuracy) %>%
+  tidyr::pivot_longer(cols = c(cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy, new_accuracy), names_to = "model", values_to = "accuracy")
 
 ggplot(df_long_fb, aes(x = datetime, y = accuracy, color = model)) +
   geom_line() +
@@ -3562,6 +3568,8 @@ cheap_model_zz <- calc_model_result(ZZ_cheap$ID, "ZZ") %>% rename("cheapest" = p
 pk_model_zz <- calc_model_result(ZZ_pk_seq$ID, "ZZ") %>% rename("pk" = pred_out)
 random_model_zz <- calc_model_result(ZZ_random$ID, "ZZ") %>% rename("random" = pred_out)
 twi_model_zz <- calc_model_result(zz_twi_sequence$ID, "ZZ") %>% rename("twi" = pred_out)
+new_model_zz <- calc_model_result(new_seq_zz$down, "ZZ") %>% rename("new" = pred_out)
+
 
 comparison_zz <- input_zz %>% 
   filter(mins %in% c(0, 30)) %>% 
@@ -3569,6 +3577,7 @@ comparison_zz <- input_zz %>%
   left_join(pk_model_zz, by = c("datetime", "ID")) %>% 
     left_join(random_model_zz, by = c("datetime", "ID")) %>% 
   left_join(twi_model_zz, by = c("datetime", "ID")) %>% 
+  left_join(new_model_zz, by = c("datetime", "ID")) %>%
   select(-wshed, -mins) %>% 
   drop_na()
 
@@ -3577,6 +3586,7 @@ comparison_zz$cheapest_eval <- mapply(get_eval_label, comparison_zz$binary, comp
 comparison_zz$pk_eval <- mapply(get_eval_label, comparison_zz$binary, comparison_zz$pk)
 comparison_zz$random_eval <- mapply(get_eval_label, comparison_zz$binary, comparison_zz$random)
 comparison_zz$twi_eval <- mapply(get_eval_label, comparison_zz$binary, comparison_zz$twi)
+comparison_zz$new_eval <- mapply(get_eval_label, comparison_zz$binary, comparison_zz$new)
 
 
 
@@ -3588,11 +3598,13 @@ df_summary_time_zz <- comparison_zz %>%
     pk_correct = sum(pk_eval == "correct"),
     random_correct = sum(random_eval == "correct"),
     twi_correct = sum(twi_eval == "correct"),
+    new_correct = sum(new_eval == "correct"),
     total = n(),
     cheap_accuracy = cheap_correct / total,
     pk_accuracy = pk_correct / total,
     random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
+    twi_accuracy = twi_correct / total,
+    new_accuracy = new_correct / total
   )
 
 
@@ -3615,6 +3627,7 @@ comparison_long_zz %>%
 
 
 ```
+
 
 
 # Paper Figures
@@ -5455,7 +5468,25 @@ hist_prep(routes_w3_random) %>%
   geom_histogram(stat = "identity")
 ```
 
-## Figure 6: Hydrograph, colored by which sequence works the best
+## Figure 6: Chains
+Plot that will show multiple chains beside each other, and highlight where they are different
+```{r}
+#Make dataframe to contain the locations of points
+rbind(#mutate(W3_cheap, method = "cheapest_insertion",x = 1),
+      mutate(W3_pk_seq, method = "pk", x = 1),
+      #mutate(convert_to_IDseq(W3_random), method = "random", x = 3),
+      mutate(w3_twi_sequence, method = "twi", x = 2),
+      mutate(convert_to_IDseq(new_seq_w3), method = "new", x = 3)
+      #mutate(convert_to_IDseq(opt_routes_w3), method = "con", x = 6)
+      ) %>% 
+  ggplot()+
+  geom_point(aes(x = x, y = sequence, color = ID), size = 10)+
+  geom_text(aes(x = x, y = sequence, label = ID), color = "white")+
+  labs()
+```
+
+
+## Figure 7: Hydrograph, colored by which sequence works the best
 NEED TO FIX COLORS
 ```{r}
 five_colors <- c("#d68c45",  "#247BA0", "#A30B37", "#F0C808", "#2c6e49")
@@ -5484,107 +5515,6 @@ inner_join(big_comb, by = "datetime") %>%
   
 
 ```
-
-## Figure 7: Accuracy of all models versus pk accuracy
-```{r W3}
-#trying to plot accuracy vs accuracy
-df_long2 <- df_summary_time_w3 %>%
-  select(datetime, cheap_accuracy, pk_accuracy, twi_accuracy, new_accuracy, con_accuracy) %>%
-  tidyr::pivot_longer(cols = c(twi_accuracy, new_accuracy, con_accuracy), 
-                      names_to = "model", values_to = "accuracy") %>% 
-    inner_join(w3_limbs, by = "datetime") %>% 
-  mutate(shed = "W3")
-
-four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
-
-df_long2 %>% 
-  ggplot()+
-  geom_point(aes(x = pk_accuracy, 
-                 y = accuracy, 
-                 size = Q_mm_day, color = model),
-             alpha = 0.5)+
-  scale_color_manual(values = five_colors)+
-  geom_abline()+
-  theme_minimal()+
-  lims(y = c(0, 1),
-       x = c(0, 1))+
-  facet_grid(~model)
-```
-```{r FB}
-#trying to plot accuracy vs accuracy
-
-#left join
-
-df_long2_fb <- df_summary_time_fb %>%
-  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy, random_accuracy, twi_accuracy), 
-                      names_to = "model", values_to = "accuracy") %>% 
-    inner_join(fb_limbs, by = "datetime")%>% 
-  mutate(shed = "FB")
-
-four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
-
-df_long2_fb %>% 
-  ggplot()+
-  geom_point(aes(x = pk_accuracy, 
-                 y = accuracy, 
-                 size = roll_mean, shape = event_type, color = model),
-             alpha = 0.5)+
-  scale_color_manual(values = c("#bb4430", "#231f20", "#f3dfa2"))+
-  geom_abline()+
-  theme_minimal()+
-  lims(y = c(0, 1),
-       x = c(0, 1))+
-  facet_grid(event_type~model)
-```
-```{r ZZ}
-#trying to plot accuracy vs accuracy
-
-#left join
-
-df_long2_zz <- df_summary_time_zz %>%
-  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy, random_accuracy, twi_accuracy), 
-                      names_to = "model", values_to = "accuracy") %>% 
-    inner_join(zz_limbs, by = "datetime")%>% 
-  mutate(shed = "ZZ")
-
-four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
-
-df_long2_zz %>% 
-  ggplot()+
-  geom_point(aes(x = pk_accuracy, 
-                 y = accuracy, 
-                 size = roll_mean, shape = event_type, color = model),
-             alpha = 0.5)+
-  scale_color_manual(values = c("#bb4430", "#231f20", "#f3dfa2"))+
-  geom_abline()+
-  theme_minimal()+
-  lims(y = c(0, 1),
-       x = c(0, 1))+
-  facet_grid(event_type~model)
-```
-Combine all of these, since they are not that different... breakup by watershed
-```{r}
-rbind(
-df_long2 %>% select(datetime, pk_accuracy, model, accuracy, event_type, shed),
-df_long2_fb %>% select(datetime, pk_accuracy, model, accuracy, event_type, shed),
-df_long2_zz %>% select(datetime, pk_accuracy, model, accuracy, event_type, shed)) %>% 
-  ggplot()+
-  geom_point(aes(x = pk_accuracy, 
-                 y = accuracy, shape = event_type, color = shed),
-             alpha = 0.5,
-             size = 2)+
-  scale_color_manual(values = shed_colors)+
-  geom_abline()+
-  theme_minimal()+
-  lims(y = c(0, 1),
-       x = c(0, 1))+
-  facet_grid(~model)
-
-
-```
-
 
 ## Figure 8: Maps of where sequences work in space
 Set of map panels where symbol color = flowing state, outline color or shape indicating correctly predicted or not
@@ -5879,18 +5809,20 @@ ID_acc_w3 <- comparison_w3 %>%
     #inner_join(fb_limbs, by = "datetime") %>% 
   group_by(ID) %>%
   summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
+    #cheap_correct = sum(cheapest_eval == "correct"),
     pk_correct = sum(pk_eval == "correct"),
     random_correct = sum(random_eval == "correct"),
     twi_correct = sum(twi_eval == "correct"),
+    new_correct = sum(new_eval == "correct"),
     total = n(),
-    cheap_accuracy = cheap_correct / total,
+    #cheap_accuracy = cheap_correct / total,
     pk_accuracy = pk_correct / total,
     random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
+    twi_accuracy = twi_correct / total,
+    new_accuracy = new_correct/total
   ) %>%
-  select(ID, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy,pk_accuracy, random_accuracy, twi_accuracy), 
+  select(ID, new_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
+  tidyr::pivot_longer(cols = c(new_accuracy,pk_accuracy, random_accuracy, twi_accuracy), 
                       names_to = "model", values_to = "accuracy")
 
 ggplot()+
@@ -5914,7 +5846,7 @@ ggplot()+
   geom_sf(data = w3_net, colour = "grey", lwd = 1) +
 geom_sf(data = w3_stic_locs_r %>% inner_join(ID_acc_w3, by = "ID"), 
         aes(fill = accuracy), size = 4, pch = 21) +
-  scale_fill_gradient(low = "white", high = "black")+
+  scale_fill_gradientn(colors = c("white","lightgrey","darkgrey", "black"))+
   #scale_shape_manual(values = c(21, 24, 22))+
   theme(rect = element_rect(fill = "transparent", color = NA))+#,
         #legend.position = "")+
@@ -6099,18 +6031,20 @@ ID_acc_fb <- comparison_fb %>%
     #inner_join(fb_limbs, by = "datetime") %>% 
   group_by(ID) %>%
   summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
+    #cheap_correct = sum(cheapest_eval == "correct"),
     pk_correct = sum(pk_eval == "correct"),
     random_correct = sum(random_eval == "correct"),
     twi_correct = sum(twi_eval == "correct"),
+    new_correct = sum(new_eval == "correct"),
     total = n(),
-    cheap_accuracy = cheap_correct / total,
+    #cheap_accuracy = cheap_correct / total,
     pk_accuracy = pk_correct / total,
     random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
+    twi_accuracy = twi_correct / total,
+    new_accuracy = new_correct / total
   ) %>%
-  select(ID, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy,pk_accuracy, random_accuracy, twi_accuracy), 
+  select(ID, pk_accuracy, random_accuracy, twi_accuracy, new_accuracy) %>%
+  tidyr::pivot_longer(cols = c(pk_accuracy, random_accuracy, twi_accuracy, new_accuracy), 
                       names_to = "model", values_to = "accuracy")
 
 ggplot()+
@@ -6285,39 +6219,39 @@ centroids(vect(ext(zz_net)))
 
 #copy and pasted from W3 chunk
   #summarize through time
-ID_acc_zz <- comparison_zz %>%
-    inner_join(zz_limbs, by = "datetime") %>% 
-  group_by(ID, event_type) %>%
-  summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
-    pk_correct = sum(pk_eval == "correct"),
-    random_correct = sum(random_eval == "correct"),
-    twi_correct = sum(twi_eval == "correct"),
-    total = n(),
-    cheap_accuracy = cheap_correct / total,
-    pk_accuracy = pk_correct / total,
-    random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
-  ) %>%
-  select(ID, event_type, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy,pk_accuracy, random_accuracy, twi_accuracy), 
-                      names_to = "model", values_to = "accuracy")
+# ID_acc_zz <- comparison_zz %>%
+#     inner_join(zz_limbs, by = "datetime") %>% 
+#   group_by(ID, event_type) %>%
+#   summarize(
+#     cheap_correct = sum(cheapest_eval == "correct"),
+#     pk_correct = sum(pk_eval == "correct"),
+#     random_correct = sum(random_eval == "correct"),
+#     twi_correct = sum(twi_eval == "correct"),
+#     total = n(),
+#     cheap_accuracy = cheap_correct / total,
+#     pk_accuracy = pk_correct / total,
+#     random_accuracy = random_correct / total,
+#     twi_accuracy = twi_correct / total
+#   ) %>%
+#   select(ID, event_type, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
+#   tidyr::pivot_longer(cols = c(cheap_accuracy,pk_accuracy, random_accuracy, twi_accuracy), 
+#                       names_to = "model", values_to = "accuracy")
 
 #figure with scale bar and legends
 
 #another version, where the points maintain their colors from earlier, but accuracy is illustrated using size or alpha
-ggplot()+
-  theme_void()+
-  geom_sf(data = zz_outline, fill = NA, color = "#7E6B8F", alpha = 0.3, lwd = 2)+
-  geom_sf(data = zz_net, colour = "grey", lwd = 1) +
-geom_sf(data = locs_shape %>% inner_join(ID_acc_zz, by = "ID"), 
-        aes(alpha = accuracy, shape = event_type, fill = model), size = 4) +
-  scale_fill_manual(values = four_colors,
-                     name = "")+
-  scale_shape_manual(values = c(21, 24, 22))+
-  theme(rect = element_rect(fill = "transparent", color = NA))+#,
-        #legend.position = "")+
-  facet_grid(event_type ~ model)
+# ggplot()+
+#   theme_void()+
+#   geom_sf(data = zz_outline, fill = NA, color = "#7E6B8F", alpha = 0.3, lwd = 2)+
+#   geom_sf(data = zz_net, colour = "grey", lwd = 1) +
+# geom_sf(data = locs_shape %>% inner_join(ID_acc_zz, by = "ID"), 
+#         aes(alpha = accuracy, shape = event_type, fill = model), size = 4) +
+#   scale_fill_manual(values = four_colors,
+#                      name = "")+
+#   scale_shape_manual(values = c(21, 24, 22))+
+#   theme(rect = element_rect(fill = "transparent", color = NA))+#,
+#         #legend.position = "")+
+#   facet_grid(event_type ~ model)
 
 
 ## Plot that is just a single row
@@ -6325,18 +6259,20 @@ ID_acc_zz <- comparison_zz %>%
     #inner_join(fb_limbs, by = "datetime") %>% 
   group_by(ID) %>%
   summarize(
-    cheap_correct = sum(cheapest_eval == "correct"),
+    #cheap_correct = sum(cheapest_eval == "correct"),
     pk_correct = sum(pk_eval == "correct"),
     random_correct = sum(random_eval == "correct"),
     twi_correct = sum(twi_eval == "correct"),
+    new_correct = sum(new_eval == "correct"),
     total = n(),
-    cheap_accuracy = cheap_correct / total,
+    #cheap_accuracy = cheap_correct / total,
     pk_accuracy = pk_correct / total,
     random_accuracy = random_correct / total,
-    twi_accuracy = twi_correct / total
+    twi_accuracy = twi_correct / total,
+    new_accuracy = new_correct / total
   ) %>%
-  select(ID, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
-  tidyr::pivot_longer(cols = c(cheap_accuracy,pk_accuracy, random_accuracy, twi_accuracy), 
+  select(ID,  pk_accuracy, random_accuracy, twi_accuracy, new_accuracy) %>%
+  tidyr::pivot_longer(cols = c(pk_accuracy, random_accuracy, twi_accuracy, new_accuracy), 
                       names_to = "model", values_to = "accuracy")
 
 ggplot()+
@@ -6385,40 +6321,40 @@ geom_sf(data =  terra::spin(lcc_zz, 180, 277401.8, 4867071) %>% inner_join(ID_ac
 #W3
 W3_rot <- ggplot()+
   theme_void()+
-  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 2)+
+  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 1)+
   geom_sf(data = w3_net, colour = "grey", lwd = 1) +
 geom_sf(data = w3_stic_locs_r %>% inner_join(ID_acc_w3, by = "ID"), 
-        aes(fill = accuracy), size = 2, pch = 21) +
-  scale_fill_gradient(low = "white", high = "black")+
+        aes(fill = accuracy), size = 3, pch = 21) +
+  scale_fill_gradientn(colors = c("white","lightgrey","darkgrey", "black"))+
   #scale_shape_manual(values = c(21, 24, 22))+
   theme(rect = element_rect(fill = "transparent", color = NA),
         legend.position = "none",
         strip.text.x = element_blank())+
   facet_grid( ~ model)
-
+W3_rot
 #FB
 FB_rot <- ggplot()+
   theme_void()+
-  geom_sf(data = terra::spin(fb_outline, 90, 279933.5, 4869173), fill = NA, color = "#397367", alpha = 0.3, lwd = 2)+
+  geom_sf(data = terra::spin(fb_outline, 90, 279933.5, 4869173), fill = NA, color = "#397367", alpha = 0.3, lwd = 1)+
   geom_sf(data = terra::spin(fb_net, 90, 279933.5, 4869173), colour = "grey", lwd = 1) +
 geom_sf(data =  terra::spin(lcc_fb, 90, 279933.5, 4869173) %>% inner_join(ID_acc_fb, by = "ID"),
-        aes(fill = accuracy), size = 2, pch = 21) +
-     scale_fill_gradient(low = "white", high = "black")+
+        aes(fill = accuracy), size = 3, pch = 21) +
+  scale_fill_gradientn(colors = c("white","lightgrey","darkgrey", "black"))+
 
   #scale_shape_manual(values = c(21, 24, 22))+
   theme(rect = element_rect(fill = "transparent", color = NA),
         legend.position="none",
         strip.text.x = element_blank()) +
   facet_grid( ~ model)
-
+FB_rot
 #zz
 ZZ_rot <- ggplot()+
   theme_void()+
-  geom_sf(data = terra::spin(zz_outline, 180, 277401.8, 4867071), fill = NA, color = "#7E6B8F", alpha = 0.3, lwd = 2)+
+  geom_sf(data = terra::spin(zz_outline, 180, 277401.8, 4867071), fill = NA, color = "#7E6B8F", alpha = 0.3, lwd = 1)+
   geom_sf(data = terra::spin(zz_net, 180, 277401.8, 4867071), colour = "grey", lwd = 1) +
 geom_sf(data =  terra::spin(lcc_zz, 180, 277401.8, 4867071) %>% inner_join(ID_acc_fb, by = "ID"),
-        aes(fill = accuracy), size = 2, pch = 21) +
-     scale_fill_gradient(low = "white", high = "black",
+        aes(fill = accuracy), size = 3, pch = 21) +
+       scale_fill_gradientn(colors = c("white","lightgrey","darkgrey", "black"),
                          limits = c(0,1),
                          labels = c("0", "0.25", "0.5", "0.75", "1"),
                          name = "Accuracy")+
@@ -6436,262 +6372,6 @@ W3_rot / FB_rot / (ZZ_rot)
 #In canva will have to add north arrows and the scale bar
 ```
 
-
-## Figure 8: Tile plot
-```{r W3}
-
-range01 <- function(x){(x-min(x))/(max(x)-min(x))}
-
-W3_twi_seq <- w3_twi_sequence %>% 
-  mutate(sequence = seq(1, length(ID), 1))
-
-w3_topo_norm <- w3_topo %>% 
-  group_by(name) %>% 
-  mutate(norm_value = range01(value))
-
-#tile plot, original vision
-rbind(W3_cheap %>% mutate(model = "cheapest"),
-      W3_pk_seq %>% mutate(model = "pk")) %>% #,
-     # W3_random %>% mutate(model = "random"),
-     # W3_twi_seq %>% mutate(model = "twi")) %>% 
-  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  drop_na() %>% 
-  ggplot() +
-  geom_tile(aes(x = sequence, y = name, fill = norm_value))+
-  scale_fill_gradient(low = "white", 
-                      high = "black")+
-  facet_grid(rows = "model")
-
-#will it look better as a line?
-#w3_explain <- 
-rbind(W3_cheap %>% mutate(model = "cheapest"),
-      W3_pk_seq %>% mutate(model = "pk")) %>% #,
-     # W3_random %>% mutate(model = "random"),
-     # W3_twi_seq %>% mutate(model = "twi")) %>% 
-  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  drop_na() %>%
-  mutate(shed = "W3") %>% 
-  ggplot(aes(x = sequence, y = norm_value, color = name)) +
-  geom_smooth(method = 'lm', se = FALSE)+
-  geom_point()+
-  facet_grid(name~model, scales = "free_x")+
-  theme_classic()
-```
-```{r}
-# Perform regressions and get significance
-rbind(W3_cheap %>% mutate(model = "cheapest"),
-      W3_pk_seq %>% mutate(model = "pk")) %>% #,
-     # W3_random %>% mutate(model = "random"),
-     # W3_twi_seq %>% mutate(model = "twi")) %>% 
-  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  as_tibble() %>% 
-group_by(model) %>% 
-  do(model = lm(sequence ~ norm_value, data = .)) #%>%
-  mutate(p_value = summary(model)$coefficients["x", "Pr(>|t|)"]) #%>%
-  mutate(significant = p_value < 0.05)
-
-W3_pk_seq %>% mutate(model = "cheapest") %>% 
-  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  as_tibble() %>% 
-  filter(name == "uaa") %>% 
-  lm(sequence ~ norm_value, data = .) %>% summary()
-group_by(name) %>% 
-  summarise(summary(lm(sequence ~ norm_value, data = .))$r.squared)
-  do(model = lm(sequence ~ norm_value, data = .)) %>% print()
-  mutate(p_value = summary(model)$coefficients["x", "Pr(>|t|)"]) #%>%
-  mutate(significant = p_value < 0.05)
-  
-  
-  
-  
-models <- data %>%
-  group_by(group) %>%
-  do(model = lm(y ~ x, data = .)) %>%
-  mutate(p_value = summary(model)$coefficients["x", "Pr(>|t|)"]) %>%
-  mutate(significant = p_value < 0.05)
-
-# Merge significance information back to the original data
-data_with_significance <- left_join(data, models %>% select(group, significant), by = "group")
-
-# Plotting
-ggplot(data_with_significance, aes(x = x, y = y, color = group)) +
-  geom_point() +
-  geom_smooth(data = . %>% filter(significant), method = "lm", se = FALSE) + # Only plot significant lines
-  labs(title = "Trend Lines for Significant Relationships Only",
-       subtitle = "Based on p-value < 0.05 for slope",
-       x = "X-axis", y = "Y-axis") +
-  theme_minimal()
-```
-
-
-```{r FB}
-
-FB_twi_seq <- fb_twi_sequence %>% 
-  mutate(sequence = seq(1, length(ID), 1))
-
-fb_topo_norm <- fb_topo %>% 
-  group_by(name) %>% 
-  mutate(norm_value = range01(value))
-
-#tile plot, original vision
-rbind(FB_cheap %>% mutate(model = "cheapest"),
-      FB_pk_seq %>% mutate(model = "pk")) %>%
-  left_join(fb_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  drop_na() %>% 
-  ggplot() +
-  geom_tile(aes(x = sequence, y = name, fill = norm_value))+
-  scale_fill_gradient(low = "white", 
-                      high = "black")+
-  facet_grid(rows = "model")
-
-#will it look better as a line?
-fb_explain <- rbind(FB_cheap %>% mutate(model = "cheapest"),
-      FB_pk_seq %>% mutate(model = "pk")) %>% #,
-     # W3_random %>% mutate(model = "random"),
-     # W3_twi_seq %>% mutate(model = "twi")) %>% 
-  left_join(fb_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  mutate(shed = "FB") %>% 
-  drop_na()
-  ggplot() +
-  geom_smooth(aes(x = sequence, y = norm_value, color = name))+
-  facet_grid(~model, scales = "free_x")+
-  theme_classic()
-  
-rbind(FB_cheap %>% mutate(model = "cheapest"),
-      FB_pk_seq %>% mutate(model = "pk")) %>% #,
-     # W3_random %>% mutate(model = "random"),
-     # W3_twi_seq %>% mutate(model = "twi")) %>% 
-  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  drop_na() %>%
-  mutate(shed = "FB") %>% 
-  ggplot(aes(x = sequence, y = norm_value, color = name)) +
-  geom_smooth(method = 'lm', se = FALSE)+
-  geom_point()+
-  facet_grid(name~model, scales = "free_x")+
-  theme_classic()
-```
-```{r ZZ}
-
-ZZ_twi_seq <- zz_twi_sequence %>% 
-  mutate(sequence = seq(1, length(ID), 1))
-
-zz_topo_norm <- zz_topo %>% 
-  group_by(name) %>% 
-  mutate(norm_value = range01(value))
-
-#tile plot, original vision
-rbind(ZZ_cheap %>% mutate(model = "cheapest"),
-      ZZ_pk_seq %>% mutate(model = "pk")) %>%
-  left_join(zz_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  drop_na() %>% 
-  ggplot() +
-  geom_tile(aes(x = sequence, y = name, fill = norm_value))+
-  scale_fill_gradient(low = "white", 
-                      high = "black")+
-  facet_grid(rows = "model")
-
-#will it look better as a line?
-zz_explain <- rbind(ZZ_cheap %>% mutate(model = "cheapest"),
-      ZZ_pk_seq %>% mutate(model = "pk")) %>% #,
-     # W3_random %>% mutate(model = "random"),
-     # W3_twi_seq %>% mutate(model = "twi")) %>% 
-  left_join(zz_topo_norm, by = "ID", relationship = "many-to-many") %>% 
-  mutate(shed = "ZZ")
-  drop_na() %>% 
-  ggplot() +
-  geom_smooth(aes(x = sequence, y = norm_value, color = name))+
-  facet_grid(~model, scales = "free_x")+
-  theme_classic()
-```
-```{r combine-as-lines}
-rbind(w3_explain, fb_explain, zz_explain) %>% 
-  ggplot() +
-  geom_smooth(aes(x = sequence, y = norm_value, color = name), method = 'lm', se = FALSE)+
-  facet_grid(model~shed, scales = "free_x")+
-  theme_classic()
-
-#lm(sequence ~ )
-
-```
-
-
-
-## Figure 9: Change in Q, versus accuracy
-```{r dQ}
-#calculate the delta Q
-df_long2 %>% 
-  mutate(dQ = abs(Q_mm_day - lag(Q_mm_day))) %>% 
-  ggplot()+
-  geom_point(aes(x = dQ, y = pk_accuracy, color = event_type))
-
-df_long2_fb %>% 
-  mutate(dQ = abs(roll_mean - lag(roll_mean))) %>% 
-  ggplot()+
-  geom_point(aes(x = dQ, y = pk_accuracy, color = event_type))+
-  lims(x = c(0,0.75))
-
-df_long2_zz %>% 
-  mutate(dQ = abs(roll_mean - lag(roll_mean))) %>% 
-  ggplot()+
-  geom_point(aes(x = dQ, y = pk_accuracy, color = event_type))+
-  lims(x = c(0,0.25))
-```
-```{r number-of-transitions}
-
-df_long2 %>%
-  filter(model == "cheap_accuracy") %>% 
-  left_join(num_trans_w3, by = "datetime") %>% 
-  ggplot()+
-  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
-             size = 2, alpha = 0.5)
-
-df_long2_fb %>% 
-  filter(model == "cheap_accuracy") %>% 
-  left_join(num_trans_fb, by = "datetime") %>% 
-  ggplot()+
-  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
-             size = 2, alpha = 0.5)
-
-df_long2_zz %>% 
-  filter(model == "cheap_accuracy") %>% 
-  left_join(num_trans_zz, by = "datetime") %>% 
-  ggplot()+
-  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
-             size = 2, alpha = 0.5)
-
-rbind(df_long2 %>%
-  filter(model == "cheap_accuracy") %>% 
-  left_join(num_trans_w3, by = "datetime") %>% 
-        select(datetime, pk_accuracy, shed, number_of_nodes, state_change),
-  df_long2_fb %>% 
-  filter(model == "cheap_accuracy") %>% 
-  left_join(num_trans_fb, by = "datetime")%>% 
-        select(datetime, pk_accuracy, shed, number_of_nodes, state_change),
-  df_long2_zz %>% 
-  filter(model == "cheap_accuracy") %>% 
-  left_join(num_trans_zz, by = "datetime") %>% 
-        select(datetime, pk_accuracy, shed, number_of_nodes, state_change)) %>% 
-  ggplot()+
-  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
-             size = 2, alpha = 0.5)+
-  facet_wrap(~shed)
-```
-## Chains
-Plot that will show multiple chains beside each other, and highlight where they are different
-```{r}
-#Make dataframe to contain the locations of points
-rbind(#mutate(W3_cheap, method = "cheapest_insertion",x = 1),
-      mutate(W3_pk_seq, method = "pk", x = 1),
-      #mutate(convert_to_IDseq(W3_random), method = "random", x = 3),
-      mutate(w3_twi_sequence, method = "twi", x = 2),
-      mutate(convert_to_IDseq(new_seq_w3), method = "new", x = 3)
-      #mutate(convert_to_IDseq(opt_routes_w3), method = "con", x = 6)
-      ) %>% 
-  ggplot()+
-  geom_point(aes(x = x, y = sequence, color = ID), size = 10)+
-  geom_text(aes(x = x, y = sequence, label = ID), color = "white")+
-  labs()
-```
 
 ## Table 1: Topographic Metrics
 ```{r}
@@ -6922,6 +6602,348 @@ kable(zz_acc, digits = 2)
 
 kable(rbind(w3_acc, fb_acc, zz_acc), digits = 2)
 
+```
+
+# Unused Figures
+## UNUSED: Accuracy of all models versus pk accuracy
+```{r W3}
+#trying to plot accuracy vs accuracy
+df_long2 <- df_summary_time_w3 %>%
+  select(datetime, cheap_accuracy, pk_accuracy, twi_accuracy, new_accuracy, con_accuracy) %>%
+  tidyr::pivot_longer(cols = c(twi_accuracy, new_accuracy, con_accuracy), 
+                      names_to = "model", values_to = "accuracy") %>% 
+    inner_join(w3_limbs, by = "datetime") %>% 
+  mutate(shed = "W3")
+
+four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
+
+df_long2 %>% 
+  ggplot()+
+  geom_point(aes(x = pk_accuracy, 
+                 y = accuracy, 
+                 size = Q_mm_day, color = model),
+             alpha = 0.5)+
+  scale_color_manual(values = five_colors)+
+  geom_abline()+
+  theme_minimal()+
+  lims(y = c(0, 1),
+       x = c(0, 1))+
+  facet_grid(~model)
+```
+```{r FB}
+#trying to plot accuracy vs accuracy
+
+#left join
+
+df_long2_fb <- df_summary_time_fb %>%
+  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
+  tidyr::pivot_longer(cols = c(cheap_accuracy, random_accuracy, twi_accuracy), 
+                      names_to = "model", values_to = "accuracy") %>% 
+    inner_join(fb_limbs, by = "datetime")%>% 
+  mutate(shed = "FB")
+
+four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
+
+df_long2_fb %>% 
+  ggplot()+
+  geom_point(aes(x = pk_accuracy, 
+                 y = accuracy, 
+                 size = roll_mean, shape = event_type, color = model),
+             alpha = 0.5)+
+  scale_color_manual(values = c("#bb4430", "#231f20", "#f3dfa2"))+
+  geom_abline()+
+  theme_minimal()+
+  lims(y = c(0, 1),
+       x = c(0, 1))+
+  facet_grid(event_type~model)
+```
+```{r ZZ}
+#trying to plot accuracy vs accuracy
+
+#left join
+
+df_long2_zz <- df_summary_time_zz %>%
+  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
+  tidyr::pivot_longer(cols = c(cheap_accuracy, random_accuracy, twi_accuracy), 
+                      names_to = "model", values_to = "accuracy") %>% 
+    inner_join(zz_limbs, by = "datetime")%>% 
+  mutate(shed = "ZZ")
+
+four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
+
+df_long2_zz %>% 
+  ggplot()+
+  geom_point(aes(x = pk_accuracy, 
+                 y = accuracy, 
+                 size = roll_mean, shape = event_type, color = model),
+             alpha = 0.5)+
+  scale_color_manual(values = c("#bb4430", "#231f20", "#f3dfa2"))+
+  geom_abline()+
+  theme_minimal()+
+  lims(y = c(0, 1),
+       x = c(0, 1))+
+  facet_grid(event_type~model)
+```
+Combine all of these, since they are not that different... breakup by watershed
+```{r}
+rbind(
+df_long2 %>% select(datetime, pk_accuracy, model, accuracy, event_type, shed),
+df_long2_fb %>% select(datetime, pk_accuracy, model, accuracy, event_type, shed),
+df_long2_zz %>% select(datetime, pk_accuracy, model, accuracy, event_type, shed)) %>% 
+  ggplot()+
+  geom_point(aes(x = pk_accuracy, 
+                 y = accuracy, shape = event_type, color = shed),
+             alpha = 0.5,
+             size = 2)+
+  scale_color_manual(values = shed_colors)+
+  geom_abline()+
+  theme_minimal()+
+  lims(y = c(0, 1),
+       x = c(0, 1))+
+  facet_grid(~model)
+
+
+```
+
+
+## UNUSED: Tile plot
+```{r W3}
+
+range01 <- function(x){(x-min(x))/(max(x)-min(x))}
+
+W3_twi_seq <- w3_twi_sequence %>% 
+  mutate(sequence = seq(1, length(ID), 1))
+
+w3_topo_norm <- w3_topo %>% 
+  group_by(name) %>% 
+  mutate(norm_value = range01(value))
+
+#tile plot, original vision
+rbind(W3_cheap %>% mutate(model = "cheapest"),
+      W3_pk_seq %>% mutate(model = "pk")) %>% #,
+     # W3_random %>% mutate(model = "random"),
+     # W3_twi_seq %>% mutate(model = "twi")) %>% 
+  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  drop_na() %>% 
+  ggplot() +
+  geom_tile(aes(x = sequence, y = name, fill = norm_value))+
+  scale_fill_gradient(low = "white", 
+                      high = "black")+
+  facet_grid(rows = "model")
+
+#will it look better as a line?
+#w3_explain <- 
+rbind(W3_cheap %>% mutate(model = "cheapest"),
+      W3_pk_seq %>% mutate(model = "pk")) %>% #,
+     # W3_random %>% mutate(model = "random"),
+     # W3_twi_seq %>% mutate(model = "twi")) %>% 
+  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  drop_na() %>%
+  mutate(shed = "W3") %>% 
+  ggplot(aes(x = sequence, y = norm_value, color = name)) +
+  geom_smooth(method = 'lm', se = FALSE)+
+  geom_point()+
+  facet_grid(name~model, scales = "free_x")+
+  theme_classic()
+```
+```{r}
+# Perform regressions and get significance
+rbind(W3_cheap %>% mutate(model = "cheapest"),
+      W3_pk_seq %>% mutate(model = "pk")) %>% #,
+     # W3_random %>% mutate(model = "random"),
+     # W3_twi_seq %>% mutate(model = "twi")) %>% 
+  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  as_tibble() %>% 
+group_by(model) %>% 
+  do(model = lm(sequence ~ norm_value, data = .)) #%>%
+  mutate(p_value = summary(model)$coefficients["x", "Pr(>|t|)"]) #%>%
+  mutate(significant = p_value < 0.05)
+
+W3_pk_seq %>% mutate(model = "cheapest") %>% 
+  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  as_tibble() %>% 
+  filter(name == "uaa") %>% 
+  lm(sequence ~ norm_value, data = .) %>% summary()
+group_by(name) %>% 
+  summarise(summary(lm(sequence ~ norm_value, data = .))$r.squared)
+  do(model = lm(sequence ~ norm_value, data = .)) %>% print()
+  mutate(p_value = summary(model)$coefficients["x", "Pr(>|t|)"]) #%>%
+  mutate(significant = p_value < 0.05)
+  
+  
+  
+  
+models <- data %>%
+  group_by(group) %>%
+  do(model = lm(y ~ x, data = .)) %>%
+  mutate(p_value = summary(model)$coefficients["x", "Pr(>|t|)"]) %>%
+  mutate(significant = p_value < 0.05)
+
+# Merge significance information back to the original data
+data_with_significance <- left_join(data, models %>% select(group, significant), by = "group")
+
+# Plotting
+ggplot(data_with_significance, aes(x = x, y = y, color = group)) +
+  geom_point() +
+  geom_smooth(data = . %>% filter(significant), method = "lm", se = FALSE) + # Only plot significant lines
+  labs(title = "Trend Lines for Significant Relationships Only",
+       subtitle = "Based on p-value < 0.05 for slope",
+       x = "X-axis", y = "Y-axis") +
+  theme_minimal()
+```
+
+
+```{r FB}
+
+FB_twi_seq <- fb_twi_sequence %>% 
+  mutate(sequence = seq(1, length(ID), 1))
+
+fb_topo_norm <- fb_topo %>% 
+  group_by(name) %>% 
+  mutate(norm_value = range01(value))
+
+#tile plot, original vision
+rbind(FB_cheap %>% mutate(model = "cheapest"),
+      FB_pk_seq %>% mutate(model = "pk")) %>%
+  left_join(fb_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  drop_na() %>% 
+  ggplot() +
+  geom_tile(aes(x = sequence, y = name, fill = norm_value))+
+  scale_fill_gradient(low = "white", 
+                      high = "black")+
+  facet_grid(rows = "model")
+
+#will it look better as a line?
+fb_explain <- rbind(FB_cheap %>% mutate(model = "cheapest"),
+      FB_pk_seq %>% mutate(model = "pk")) %>% #,
+     # W3_random %>% mutate(model = "random"),
+     # W3_twi_seq %>% mutate(model = "twi")) %>% 
+  left_join(fb_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  mutate(shed = "FB") %>% 
+  drop_na()
+  ggplot() +
+  geom_smooth(aes(x = sequence, y = norm_value, color = name))+
+  facet_grid(~model, scales = "free_x")+
+  theme_classic()
+  
+rbind(FB_cheap %>% mutate(model = "cheapest"),
+      FB_pk_seq %>% mutate(model = "pk")) %>% #,
+     # W3_random %>% mutate(model = "random"),
+     # W3_twi_seq %>% mutate(model = "twi")) %>% 
+  left_join(w3_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  drop_na() %>%
+  mutate(shed = "FB") %>% 
+  ggplot(aes(x = sequence, y = norm_value, color = name)) +
+  geom_smooth(method = 'lm', se = FALSE)+
+  geom_point()+
+  facet_grid(name~model, scales = "free_x")+
+  theme_classic()
+```
+```{r ZZ}
+
+ZZ_twi_seq <- zz_twi_sequence %>% 
+  mutate(sequence = seq(1, length(ID), 1))
+
+zz_topo_norm <- zz_topo %>% 
+  group_by(name) %>% 
+  mutate(norm_value = range01(value))
+
+#tile plot, original vision
+rbind(ZZ_cheap %>% mutate(model = "cheapest"),
+      ZZ_pk_seq %>% mutate(model = "pk")) %>%
+  left_join(zz_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  drop_na() %>% 
+  ggplot() +
+  geom_tile(aes(x = sequence, y = name, fill = norm_value))+
+  scale_fill_gradient(low = "white", 
+                      high = "black")+
+  facet_grid(rows = "model")
+
+#will it look better as a line?
+zz_explain <- rbind(ZZ_cheap %>% mutate(model = "cheapest"),
+      ZZ_pk_seq %>% mutate(model = "pk")) %>% #,
+     # W3_random %>% mutate(model = "random"),
+     # W3_twi_seq %>% mutate(model = "twi")) %>% 
+  left_join(zz_topo_norm, by = "ID", relationship = "many-to-many") %>% 
+  mutate(shed = "ZZ")
+  drop_na() %>% 
+  ggplot() +
+  geom_smooth(aes(x = sequence, y = norm_value, color = name))+
+  facet_grid(~model, scales = "free_x")+
+  theme_classic()
+```
+```{r combine-as-lines}
+rbind(w3_explain, fb_explain, zz_explain) %>% 
+  ggplot() +
+  geom_smooth(aes(x = sequence, y = norm_value, color = name), method = 'lm', se = FALSE)+
+  facet_grid(model~shed, scales = "free_x")+
+  theme_classic()
+
+#lm(sequence ~ )
+
+```
+
+
+
+## UNUSED: Change in Q, versus accuracy
+```{r dQ}
+#calculate the delta Q
+df_long2 %>% 
+  mutate(dQ = abs(Q_mm_day - lag(Q_mm_day))) %>% 
+  ggplot()+
+  geom_point(aes(x = dQ, y = pk_accuracy, color = event_type))
+
+df_long2_fb %>% 
+  mutate(dQ = abs(roll_mean - lag(roll_mean))) %>% 
+  ggplot()+
+  geom_point(aes(x = dQ, y = pk_accuracy, color = event_type))+
+  lims(x = c(0,0.75))
+
+df_long2_zz %>% 
+  mutate(dQ = abs(roll_mean - lag(roll_mean))) %>% 
+  ggplot()+
+  geom_point(aes(x = dQ, y = pk_accuracy, color = event_type))+
+  lims(x = c(0,0.25))
+```
+```{r number-of-transitions}
+
+df_long2 %>%
+  filter(model == "cheap_accuracy") %>% 
+  left_join(num_trans_w3, by = "datetime") %>% 
+  ggplot()+
+  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
+             size = 2, alpha = 0.5)
+
+df_long2_fb %>% 
+  filter(model == "cheap_accuracy") %>% 
+  left_join(num_trans_fb, by = "datetime") %>% 
+  ggplot()+
+  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
+             size = 2, alpha = 0.5)
+
+df_long2_zz %>% 
+  filter(model == "cheap_accuracy") %>% 
+  left_join(num_trans_zz, by = "datetime") %>% 
+  ggplot()+
+  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
+             size = 2, alpha = 0.5)
+
+rbind(df_long2 %>%
+  filter(model == "cheap_accuracy") %>% 
+  left_join(num_trans_w3, by = "datetime") %>% 
+        select(datetime, pk_accuracy, shed, number_of_nodes, state_change),
+  df_long2_fb %>% 
+  filter(model == "cheap_accuracy") %>% 
+  left_join(num_trans_fb, by = "datetime")%>% 
+        select(datetime, pk_accuracy, shed, number_of_nodes, state_change),
+  df_long2_zz %>% 
+  filter(model == "cheap_accuracy") %>% 
+  left_join(num_trans_zz, by = "datetime") %>% 
+        select(datetime, pk_accuracy, shed, number_of_nodes, state_change)) %>% 
+  ggplot()+
+  geom_point(aes(x = number_of_nodes, y = pk_accuracy, color = state_change),
+             size = 2, alpha = 0.5)+
+  facet_wrap(~shed)
 ```
 # Testing many random sequences
 What if we test 100 different cheapest_insertions?
@@ -7343,8 +7365,4 @@ all_pk <- rbind(calc_props(routes_w3, "W3"),
   mutate("method" = "Flow Permanence")
 ```
 
-# Should I run the analysis again, but separating the two summers? Or by season? Or by wetting and drying?
-```{r}
-
-```
 
